WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80528
Web Inspector: CSS content is not shown when stylesheet is loaded with invalid mime type in quirks mode.
https://bugs.webkit.org/show_bug.cgi?id=80528
Summary
Web Inspector: CSS content is not shown when stylesheet is loaded with invali...
Vsevolod Vlasov
Reported
2012-03-07 12:09:55 PST
CSS content is not shown when stylesheet is loaded with invalid mime type in quirks mode.
Attachments
Patch
(5.61 KB, patch)
2012-03-11 03:08 PDT
,
Vsevolod Vlasov
no flags
Details
Formatted Diff
Diff
Patch
(5.54 KB, patch)
2012-03-11 05:40 PDT
,
Vsevolod Vlasov
pfeldman
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2012-03-11 03:08:47 PDT
Created
attachment 131213
[details]
Patch
Alexander Pavlov (apavlov)
Comment 2
2012-03-11 05:05:05 PDT
Comment on
attachment 131213
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=131213&action=review
> LayoutTests/http/tests/inspector/resource-tree/resource-tree-invalid-mime-type-css-content.html:36 > + <!--<iframe src="resources/dummy-iframe.html" onload="runTest()">-->
Is this line necessary?
Vsevolod Vlasov
Comment 3
2012-03-11 05:40:59 PDT
Created
attachment 131218
[details]
Patch
Vsevolod Vlasov
Comment 4
2012-03-11 05:41:19 PDT
(In reply to
comment #2
)
> (From update of
attachment 131213
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=131213&action=review
> > > LayoutTests/http/tests/inspector/resource-tree/resource-tree-invalid-mime-type-css-content.html:36 > > + <!--<iframe src="resources/dummy-iframe.html" onload="runTest()">--> > > Is this line necessary?
Of course not, thanks for spotting this.
Vsevolod Vlasov
Comment 5
2012-03-11 08:00:01 PDT
Committed
r110392
: <
http://trac.webkit.org/changeset/110392
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug