Web Inspector: CSS content is not shown when stylesheet is loaded with invalid mime type in quirks mode. https://bugs.webkit.org/show_bug.cgi?id=80528

Reviewed by Pavel Feldman.

Source/WebCore:

Test: http/tests/inspector/resource-tree/resource-tree-invalid-mime-type-css-content.html

* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::cachedResourceContent):

LayoutTests:

* http/tests/inspector/resource-tree/resource-tree-invalid-mime-type-css-content-expected.txt: Added.
* http/tests/inspector/resource-tree/resource-tree-invalid-mime-type-css-content.html: Added.
* http/tests/inspector/resource-tree/resources/stylesheet-text-plain.php: Added.

Canonical link: https://commits.webkit.org/97983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110392 268f45cc-cd09-0410-ab3c-d52691b4dbfc